Bug 125814 - Some items disappear in Autofilter drop-down when you select or deselect any item and shows when you scroll list
Summary: Some items disappear in Autofilter drop-down when you select or deselect any ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.4.0 target:6.3.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: AutoFilter
  Show dependency treegraph
 
Reported: 2019-06-09 17:10 UTC by Roman Kuznetsov
Modified: 2019-06-12 20:24 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample file (9.38 KB, application/vnd.oasis.opendocument.spreadsheet)
2019-06-09 17:12 UTC, Roman Kuznetsov
Details
Screenshot of problem (11.33 KB, image/png)
2019-06-09 17:13 UTC, Roman Kuznetsov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2019-06-09 17:10:16 UTC
Description:
Some items dissapear in Autofilter drop-down when you select or deselect any item and shows when you scroll list

I think it's regression from Miklos fixing of bug 101086

Steps to Reproduce:
1. Open file from attach
2. Open Autofilter widget in A1 cell
3. Try deselect any item in list -> some items dissapear
4. Try scroll list up-down -> all items show
5. Try select deselected item -> some items dissapear
6. try scroll list up-down -> all items show

Actual Results:
Autofilter has problem=(

Expected Results:
Autofilter works fine


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.4.0.0.alpha0+ (x64)
Build ID: b170256fb6ebaf774b02b89835b19d9f3a1afb89
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-06-07_03:30:35
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: threaded

I have 125% scaled GUI in Windows!
Comment 1 Roman Kuznetsov 2019-06-09 17:12:04 UTC
Created attachment 152066 [details]
Sample file
Comment 2 Roman Kuznetsov 2019-06-09 17:13:06 UTC
Created attachment 152068 [details]
Screenshot of problem
Comment 3 Aron Budea 2019-06-10 02:24:39 UTC
Nice catch! I can confirm this started with bug 101086's fix. Also, this one doesn't need 125% DPI scaling to show, unlike bug 125791. Adding Cc: to Miklos Vajna, please take a look.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=4dadbff74eff5f8ad00df99c659f8a2b914e09a1
author		Miklos Vajna <vmiklos@collabora.com>	2019-06-04 14:11:33 +0200
committer	Miklos Vajna <vmiklos@collabora.com>	2019-06-04 14:59:54 +0200

tdf#101086 sc autofilter popup: avoid flicker
Comment 4 Miklos Vajna 2019-06-11 07:00:44 UTC
Is this Windows-specific? So far the only confirmation is on Windows.
Comment 5 Miklos Vajna 2019-06-11 09:49:29 UTC
Ah no, I can see it on Linux with the gen backend as well. I'll look at this.
Comment 6 Commit Notification 2019-06-11 22:29:23 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/7aaa7212f2f37606b34d44a039398f05c02d5660%5E%21

tdf#125814 sc autofilter popup: perform non-partial paint on entry invalidate

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2019-06-12 12:26:55 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/ece8aa80a9f0b59eb2b542571dcb777b9a74abde%5E%21

tdf#125814 sc autofilter popup: perform non-partial paint on entry invalidate

It will be available in 6.3.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Roman Kuznetsov 2019-06-12 20:24:12 UTC
verified in

Version: 6.4.0.0.alpha0+ (x64)
Build ID: 7aaa7212f2f37606b34d44a039398f05c02d5660
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-06-11_23:48:14
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: threaded

Thank you , Miklos!