tdf#125814 sc autofilter popup: perform non-partial paint on entry invalidate

... in the double-buffering case. Commit
a4cb27f61376d8f2d8faed0022c291af68d437bd (refactor ScMenuFloatingWindow
to use RenderContext, 2015-05-14) changed the partial paints to
invalidate + full paint, so invalidate the whole treelist, this makes
sure that no checkboxes go missing on mouse click.

(cherry picked from commit 7aaa7212f2f37606b34d44a039398f05c02d5660)

Conflicts:
	vcl/source/treelist/svimpbox.cxx

Change-Id: I43377b7e29d1cdfb43c60256bd57531a8251e2ed